[BOODMO-16973] fix new  order table

--- a/src/app/page/orders/orders.component.html
+++ b/src/app/page/orders/orders.component.html
@@ -6,215 +6,16 @@
       <app-dialog-order-create></app-dialog-order-create>
     </div>
     <div class="row justify-content-md-center mb-3">
-      <table class="pure-table pure-table-horizontal">
-        <thead>
+      <table class="table table-bordered pure-table pure-table-horizontal">
+        <thead class="thead-light text-center align-middle">
         <tr>
-          <th rowspan="2" class="align-middle text-center">Order No#</th>
+          <th scope="col" rowspan="2">Order No#</th>
           <th rowspan="2" class="align-middle text-center"
               [class.active]="order === 'createdAt'"
               (click)="setOrder('createdAt')"
           >
             Date <span [hidden]="reverse">▼</span><span [hidden]="!reverse">▲</span>
           </th>
-          <th rowspan="2" class="align-middle text-center">Customer</th>
-          <th colspan="2" class="align-middle text-center">Invoices</th>
-          <th colspan="8" class="align-middle text-center">Items</th>
-        </tr>
-        <tr>
-          <th class="align-middle text-center">No#</th>
-          <th class="align-middle text-center">Date</th>
-          <th class="align-middle text-center">Seller</th>
-          <th class="align-middle text-center">SKU</th>
-          <th class="align-middle text-center">price</th>
-          <th class="align-middle text-center">qty</th>
-          <th class="align-middle text-center">total shipping</th>
-          <th class="align-middle text-center">total price</th>
-          <th class="align-middle text-center">total fee</th>
-          <th class="align-middle text-center">status</th>
-        </tr>
-        </thead>
-        <tbody>
-        <tr *ngFor="let order of model.orders.all() | orderBy: order:reverse">
-          <td class="text-center align-middle">
-            <span>{{order.id}}</span>
-            <div class="btn-group-vertical btn-group-sm" role="group">
-              <button class="btn btn-sm btn-{{action.color}}"
-                      [title]="action.title"
-                      *ngFor="let action of model.orderActions(order)"
-                      (click)="action.handler()"
-                      type="button"
-
-              >{{action.name}}</button>
-            </div>
-          </td>
-          <td>{{order.createdAt | dateFormat}}</td>
-          <td>{{order.customerName}}</td>
-          <td colspan="2" style="padding: 0" class="align-middle text-center">
-            <table class="pure-table pure-table-horizontal text-center"
-                   *ngIf="model.invoicesByOrder(order).count() > 0"
-            >
-              <tbody>
-              <tr *ngFor="let invoice of model.invoicesByOrder(order).all(); let i = index"
-                  [class.pure-table-odd]="i % 2 === 0"
-              >
-                <td>
-                  <span>{{invoice.id}}</span>
-                  <div class="btn-group" role="group">
-                    <button type="button"
-                            *ngIf="invoice.canShipped"
-                            (click)="invoice.ship()"
-                            class="btn btn-sm btn-success"
-                            title="ship invoice"
-                    >SH
-                    </button>
-                    <button type="button"
-                            *ngIf="invoice.canCanceled"
-                            (click)="invoice.cancel()"
-                            class="btn btn-sm btn-primary"
-                            title="cancel invoice"
-                    >CA
-                    </button>
-                  </div>
-                </td>
-                <td>
-                  <span>{{invoice.createdAt | dateFormat}}</span>
-                  <div class="btn-group" role="group">
-                    <button type="button"
-                            *ngIf="invoice.isSaved"
-                            (click)="model.saveInvoice(invoice)"
-                            class="btn btn-sm btn-success"
-                            title="add to invoice"
-                    >save
-                    </button>
-                  </div>
-                </td>
-              </tr>
-              </tbody>
-            </table>
-          </td>
-          <td colspan="7" style="padding: 0" class="align-middle text-center">
-            <app-order-items-table
-              [isNested]="true"
-              [data]="order"
-            ></app-order-items-table>
-          </td>
-          <td style="padding: 0" class="align-middle text-center">
-            <table class="pure-table pure-table-horizontal text-center">
-              <tbody>
-              <tr *ngFor="let item of order.items; let i = index"
-                  [class.pure-table-odd]="i % 2 === 0"
-              >
-                <td>
-                  <span>{{item.status}}</span>
-                  <div class="btn-group" role="group">
-                    <button type="button"
-                            *ngIf="item.canInvoiced"
-                            (click)="model.toInvoiceOrderItem(item)"
-                            class="btn btn-sm btn-success"
-                            title="add to invoice"
-                    >IN
-                    </button>
-                    <button type="button"
-                            *ngIf="item.canCanceled"
-                            (click)="item.cancel()"
-                            class="btn btn-sm btn-primary"
-                            title="cancel item"
-                    >CA
-                    </button>
-                    <button type="button"
-                            *ngIf="item.canReturned"
-                            (click)="item.return()"
-                            class="btn btn-sm btn-secondary"
-                            title="create RMA"
-                    >RM
-                    </button>
-                    <button type="button"
-                            *ngIf="item.canRefunded"
-                            (click)="model.toRefundOrderItem(item)"
-                            class="btn btn-sm btn-danger"
-                            title="refund"
-                    >RF
-                    </button>
-                  </div>
-                </td>
-              </tr>
-              </tbody>
-            </table>
-          </td>
-        </tr>
-        <tr *ngIf="model.orders.count() === 0">
-          <td colspan="14"
-              class="align-middle text-center"
-          >empty
-          </td>
-        </tr>
-        </tbody>
-      </table>
-
-      <table class="table table-bordered">
-        <thead class="thead-light">
-        <tr>
-          <th scope="col" rowspan="2">Order No#</th>
-<!--          <th scope="col" rowspan="2">Date</th>-->
-<!--          <th scope="col" rowspan="2">Customer</th>-->
-
-          <th scope="colgroup" colspan="1">Invoices</th>
-          <th scope="colgroup" colspan="1">Items</th>
-        </tr>
-        <tr>
-          <th scope="col">No#</th>
-<!--          <th scope="col">Date</th>-->
-
-          <th scope="col">Seller</th>
-<!--          <th scope="col">SKU</th>-->
-<!--          <th scope="col">price</th>-->
-<!--          <th scope="col">qty</th>-->
-<!--          <th scope="col">total shipping</th>-->
-<!--          <th scope="col">total price</th>-->
-<!--          <th scope="col">total fee</th>-->
-<!--          <th scope="col">status</th>-->
-
-        </tr>
-        </thead>
-        <ng-container *ngFor="let order of model.orders.all()">
-          <tr>
-            <td [rowSpan]="order.items.length">{{order.id}}</td>
-
-            <ng-container *ngFor="let group of order.groupByInvoiceItems.slice(0,1)">
-              <td [attr.rowspan]="group.items.length">{{group.invoice?.id}}</td>
-
-              <ng-container *ngFor="let item of group.items.slice(0,1)">
-                <td>{{item?.id}}</td>
-              </ng-container>
-
-            </ng-container>
-          </tr>
-
-          <tr *ngFor="let item of order.groupByInvoiceItems.slice(0,1).shift().items.slice(1)">
-              <td>{{item?.id}}</td>
-          </tr>
-
-          <ng-container *ngFor="let group of order.groupByInvoiceItems.slice(1)">
-            <tr>
-              <td>{{group.invoice?.id}}</td>
-              <ng-container *ngFor="let item of group.items.slice(0,1)">
-                <td>{{item?.id}}</td>
-              </ng-container>
-            </tr>
-
-            <tr *ngFor="let item of group.items.slice(1)">
-              <td>{{item?.id}}</td>
-            </tr>
-          </ng-container>
-
-        </ng-container>
-      </table>
-
-      <!--<table class="table table-bordered table-striped table-hover">
-        <thead class="thead-light">
-        <tr>
-          <th scope="col" rowspan="2">Order No#</th>
-          <th scope="col" rowspan="2">Date</th>
           <th scope="col" rowspan="2">Customer</th>
 
           <th scope="colgroup" colspan="2">Invoices</th>
@@ -222,7 +23,12 @@
         </tr>
         <tr>
           <th scope="col">No#</th>
-          <th scope="col">Date</th>
+          <th scope="col"
+            [class.active]="order === 'createdAt'"
+            (click)="setOrder('invoice.createdAt')"
+            >
+            Date <span [hidden]="reverse">▼</span><span [hidden]="!reverse">▲</span>
+          </th>
 
           <th scope="col">Seller</th>
           <th scope="col">SKU</th>
@@ -236,13 +42,14 @@
         </tr>
         </thead>
         <tbody>
-        <ng-container *ngFor="let order of model.orders.all() | orderBy: order:reverse">
 
-          &lt;!&ndash; Start Order row &ndash;&gt;
-          <tr>
-            <th scope="rowgroup" [attr.rowspan]="order.items.length"
+        <!-- Start Order row -->
+        <ng-container *ngFor="let order of model.orders.all() | orderBy: order:reverse">
+          <tr
+            class="text-center align-middle">
+            <td [rowSpan]="order.items.length"
                 class="text-center align-middle">
-              <span>{{order.id}}</span>
+              {{order.id}}
               <div class="btn-group-vertical btn-group-sm" role="group">
                 <button class="btn btn-sm btn-{{action.color}}"
                         [title]="action.title"
@@ -252,19 +59,25 @@
 
                 >{{action.name}}</button>
               </div>
-            </th>
+            </td>
+            <td [rowSpan]="order.items.length"
+                class="text-center align-middle">{{order.createdAt | dateFormat}}</td>
+            <td [rowSpan]="order.items.length"
+                class="text-center align-middle">{{order.customerName}}</td>
 
-            <td [attr.rowspan]="order.items.length">{{order.createdAt | dateFormat}}</td>
-            <td [attr.rowspan]="order.items.length">{{order.customerName}}</td>
-
-            &lt;!&ndash;First Invoice row&ndash;&gt;
+            <!--First Invoice row-->
             <ng-container *ngFor="let group of order.groupByInvoiceItems.slice(0,1)">
-              <th scope="row"
-                  [rowSpan]="group.items.length"
-              >{{group.invoice?.id}}</th>
-              <td [rowSpan]="group.items.length">{{group.invoice?.createdAt | dateFormat}}</td>
+              <td [attr.rowspan]="group.items.length"
+                  class="text-center align-middle">
+                <span>{{group.invoice?.id}}</span>
+              </td>
+              <td [attr.rowspan]="group.items.length"
+                  class="text-center align-middle">
+                <span>{{group.invoice?.createdAt | dateFormat}}</span>
+                <invoice-actions [order]="order" [invoice]="group.invoice"></invoice-actions>
+              </td>
 
-              &lt;!&ndash;First Order Item row&ndash;&gt;
+              <!--First Order Item row-->
               <ng-container *ngFor="let item of group.items.slice(0,1)">
                 <td>{{item.sellerName}}</td>
                 <td>{{item.sku}}</td>
@@ -273,42 +86,47 @@
                 <td>{{item.amountShipping | convert}}</td>
                 <td>{{item.total | convert}}</td>
                 <td>{{item.feeMarket | convert}}</td>
-                <td>TA</td>
+                <td>
+                  <item-status-actions [item]="item"></item-status-actions>
+                </td>
               </ng-container>
-              &lt;!&ndash;End First Order Item row&ndash;&gt;
+              <!--End First Order Item row-->
 
             </ng-container>
-            &lt;!&ndash;End Order Item row&ndash;&gt;
+            <!--End First Invoice row-->
 
           </tr>
 
-          &lt;!&ndash;First Invoice - Next Order Item row&ndash;&gt;
-          <tr *ngFor="let item of order.groupByInvoiceItems.slice(0,1).items; let itemIndex = index">
-
-            <td colspan="8">{{itemIndex}}</td>
-&lt;!&ndash;          <tr *ngFor="let item of order.groupByInvoiceItems.slice(0,1).slice(1)">&ndash;&gt;
-&lt;!&ndash;            <ng-container *ngIf="itemIndex !== 0">&ndash;&gt;
-&lt;!&ndash;              <td>{{item.sellerName}}</td>&ndash;&gt;
-&lt;!&ndash;              <td>{{item.sku}}</td>&ndash;&gt;
-&lt;!&ndash;              <td>{{item.price | convert}}</td>&ndash;&gt;
-&lt;!&ndash;              <td>{{item.qty}}</td>&ndash;&gt;
-&lt;!&ndash;              <td>{{item.amountShipping | convert}}</td>&ndash;&gt;
-&lt;!&ndash;              <td>{{item.total | convert}}</td>&ndash;&gt;
-&lt;!&ndash;              <td>{{item.feeMarket | convert}}</td>&ndash;&gt;
-&lt;!&ndash;              <td>TA</td>&ndash;&gt;
-&lt;!&ndash;            </ng-container>&ndash;&gt;
+          <!--First Invoice - Next Order Item row-->
+          <tr *ngFor="let item of order.groupByInvoiceItems.slice(0,1).shift().items.slice(1)"
+              class="text-center align-middle">
+            <td>{{item.sellerName}}</td>
+            <td>{{item.sku}}</td>
+            <td>{{item.price | convert}}</td>
+            <td>{{item.qty}}</td>
+            <td>{{item.amountShipping | convert}}</td>
+            <td>{{item.total | convert}}</td>
+            <td>{{item.feeMarket | convert}}</td>
+            <td>
+              <item-status-actions [item]="item"></item-status-actions>
+            </td>
           </tr>
-          &lt;!&ndash;End First Invoice - Next Order Item row&ndash;&gt;
+          <!--End First Invoice - Next Order Item row-->
 
-          &lt;!&ndash;Next Invoice row&ndash;&gt;
+          <!--Next Invoice row-->
           <ng-container *ngFor="let group of order.groupByInvoiceItems.slice(1)">
-            <tr>
-              <th scope="row"
-                  [rowSpan]="group.items.length"
-              >{{group.invoice?.id}}</th>
-              <td [rowSpan]="group.items.length">{{group.invoice?.createdAt | dateFormat}}</td>
+            <tr class="text-center align-middle">
+              <td [rowSpan]="group.items.length"
+                  class="text-center align-middle">
+                {{group.invoice?.id}}
+              </td>
+              <td [attr.rowspan]="group.items.length"
+                  class="text-center align-middle">
+                {{group.invoice?.createdAt | dateFormat}}
+                <invoice-actions [order]="order" [invoice]="group.invoice"></invoice-actions>
+              </td>
 
-              &lt;!&ndash;Next Invoice - First Order Item row&ndash;&gt;
+              <!--Next Invoice - First Order Item row-->
               <ng-container *ngFor="let item of group.items.slice(0,1)">
                 <td>{{item.sellerName}}</td>
                 <td>{{item.sku}}</td>
@@ -317,13 +135,17 @@
                 <td>{{item.amountShipping | convert}}</td>
                 <td>{{item.total | convert}}</td>
                 <td>{{item.feeMarket | convert}}</td>
-                <td>TA</td>
+                <td>
+                  <item-status-actions [item]="item"></item-status-actions>
+                </td>
               </ng-container>
+              <!--End Next Invoice - First Order Item row-->
 
             </tr>
 
-            &lt;!&ndash;Next Invoice - Next Order Item row&ndash;&gt;
-            <tr *ngFor="let item of group.items.slice(1)">
+            <!--Next Invoice - Next Order Item row-->
+            <tr *ngFor="let item of group.items.slice(1)"
+                class="text-center align-middle">
               <td>{{item.sellerName}}</td>
               <td>{{item.sku}}</td>
               <td>{{item.price | convert}}</td>
@@ -331,18 +153,26 @@
               <td>{{item.amountShipping | convert}}</td>
               <td>{{item.total | convert}}</td>
               <td>{{item.feeMarket | convert}}</td>
-              <td>TA</td>
+              <td>
+                <item-status-actions [item]="item"></item-status-actions>
+              </td>
             </tr>
-            &lt;!&ndash;End Next Invoice - Next Order Item row&ndash;&gt;
+            <!--End Next Invoice - Next Order Item row-->
 
           </ng-container>
+          <!--End Next Invoice row-->
 
-        &lt;!&ndash;End Order Item row&ndash;&gt;
         </ng-container>
+        <!-- End Order row -->
+
+        <tr *ngIf="model.orders.count() === 0">
+          <td colspan="14"
+              class="align-middle text-center"
+          >empty</td>
+        </tr>
 
         </tbody>
-      </table>-->
-
+      </table>
 
     </div>
   </div>
